--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,9 @@ specific language governing permissions and limitations under the License.
 
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="//libs.cdnjs.net/jqueryui/1.11.4/themes/hot-sneaks/jquery-ui.css">
-    <script src="//libs.cdnjs.net/jquery/1.11.2/jquery.min.js"></script>
-    <script src="//libs.cdnjs.net/jqueryui/1.11.2/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="//ajax.loli.net/ajax/libs/jqueryui/1.11.4/themes/hot-sneaks/jquery-ui.css">
+    <script src="//ajax.loli.net/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="//ajax.loli.net/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.4/select2.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/1.6.6/jquery.contextMenu.css">
